# fdv_converter_t

./: .gitignore  latest.json  package.json  tsconfig.json  vite.config.ts
docs/: R3_calculator.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  commands.rs  file_processor.rs  lib.rs  logger.rs  main.rs
src-tauri/src/backend/: backend.rs  batch_processing.rs  file_processor.rs  interim_reports.rs  mod.rs  site_info.rs
src-tauri/src/calculations/: calculator.rs  circular_calculator.rs  egg1_calculator.rs  egg2_calculator.rs  egg2a_calculator.rs  egg_calculator.rs  mod.rs  r3_calculator.rs  rectangular_calculator.rs  two_circle_and_rectangle_calculator.rs  wetted_area_calculation_helper.rs
src-tauri/src/fdv/: fdv_creator.rs  mod.rs  rainfall_creator.rs
src-tauri/src/utils/: commands.rs  logger.rs  mod.rs
src/components/: fdv-converter.tsx  spinner.tsx
