[package]
name = "fdvconverter"
version = "2.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fdvconverter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.0.2", features = ["config-json5"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
chrono = "0.4.38"
log = "0.4.22"
polars = {version = "0.43.1", features = ["lazy", "strings", "temporal", "round_series"] }
calamine = "0.26.0"
csv = "1.3.0"
thiserror = "1.0.64"
rayon = "1.10.0"
regex = "1.11.0"
zip = "2.2.0"
rust_xlsxwriter = "0.79.0"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

